chore: another iteration of changes